src/test/deca/test_compilateur/codegen/valid/created/class/test_problem.deca
// Description :
//		on redefinit equals 
//
// Resultats :
//		Ok

class U {
	int u(){
		return 0;
		println("aaah");

	}
}
{
    U u = new U();
   	println(u.u()); 
}