src/test/deca/test_compilateur/codegen/invalid/created/objet_non_init_met.deca
// Description :
//		Programme pour tester le modulo par zero
//
// Resultats :
//		indefini

class A {
int x(){return 1;}
}
{
A a;
a.x();
}